assets/css/theme.css
/* ... */
.contact-block__text a {
  color: currentColor;
  text-decoration: none;
  transition: 0.3s;
}

.contact-block__text a:hover {
  color: #2E3092;
}

.contact-block__text p {
  margin-bottom: 24px;
}

.contact-block__link {
  display: inline-block;
  vertical-align: top;
  font-weight: 600;
  color: #09c;
  transition: all 0.3s;
  text-decoration: none;
  margin-bottom: 65px;
}

.contact-block__link:hover {
  color: #2E3092;
}

.contact-block__link-icon {
  font-size: 0.8em;
  margin-left: 7px;
}

.contact-block__form {
  display: block;
  margin-top: 72px;
}

.contact-block__input-text,
.contact-block__input-textarea {
  width: 100%;
  display: block;
  border: 0;
  border-bottom: 1px solid #ccc;
  background: transparent;
}

.contact-block__input-text::-webkit-input-placeholder,
.contact-block__input-textarea::-webkit-input-placeholder {
  color: #999 !important;
}

.contact-block__input-text:-moz-placeholder,
.contact-block__input-textarea:-moz-placeholder {
  color: #999 !important;
}

.contact-block__input-text::-moz-placeholder,
.contact-block__input-textarea::-moz-placeholder {
  color: #999 !important;
}

.contact-block__input-text:-ms-input-placeholder,
.contact-block__input-textarea:-ms-input-placeholder {
  color: #999 !important;
}

.contact-block__input-text.placeholder,
.contact-block__input-textarea.placeholder {
  color: #999 !important;
}

.contact-block__input-text:focus,
.contact-block__input-textarea:focus {
  border-color: #000;
}

.contact-block__input-text {
  height: 52px;
  margin-bottom: 23px;
}

.contact-block__input-textarea {
  padding: 12px 0;
  min-height: 160px;
}

.contact-block__submit {
  color: #2E3092;
  text-transform: uppercase;
  border: 0;
  background: none;
  padding: 0;
  font-weight: 600;
  margin-top: 98px;
  transition: 0.3s;
}

.contact-block__submit:hover {
  color: #09c;
}

.contact-block__submit-icon {
  display: inline-block;
  vertical-align: top;
  font-size: 1.3em;
  margin-left: 0.2em;
  margin-top: -0.05em;
}

/*
counter-block
*/

.counter-block {
  padding-top: 165px;
  padding-bottom: 100px;
}

.counter-block__card {
  padding: 55px 52px;
  background-image: url("../img/dot.jpg");
  border-top: 5px solid #2E3092;
  text-transform: uppercase;
  margin-bottom: 80px;
}

.counter-block__card-title {
  color: #999;
  font-size: 30px;
  font-family: 'Alumni Sans', Helvetica, sans-serif;
  line-height: 1;
  margin-bottom: 96px;
}

.counter-block__card-value {
  color: #2E3092;
  font-size: 250px;
  line-height: 1;
  font-family: 'Alumni Sans', Helvetica, sans-serif;
  margin-left: -7px;
  margin-bottom: -25px;
}

.counter-block__card-description {
  color: #2E3092;
  font-size: 24px;
  line-height: 1.25;
  font-weight: 600;
}

.counter-block__title {
  margin-bottom: 66px;
}

.counter-block__item {
  margin-bottom: 46px;
}

.counter-block__item-value {
  font-family: 'Alumni Sans', Helvetica, sans-serif;
  font-size: 100px;
  line-height: 1;
  margin-bottom: 11px;
}

.counter-block__item-text {
  color: #666;
  font-size: 16px;
}

/*
dropdown
*/

.dropdown {
  position: relative;
}

.dropdown__menu {
  position: absolute;
  background: #fff;
  color: #000;
  display: -ms-flexbox;
  display: flex;
  padding: 37px 0px 40px 45px;
  left: -45px;
  top: 66px;
  visibility: hidden;
  opacity: 0;
  transition: 0.3s;
  transition-delay: 0.3s;
  box-shadow: 0 0 65px rgba(0,0,0,0.07);
}

.dropdown:hover .dropdown__menu {
  opacity: 1;
  visibility: visible;
}

.dropdown__menu_side_right {
  left: auto;
  right: -30px;
}

.dropdown__column {
  margin-right: 30px;
  min-width: 125px;
}

.dropdown__title {
  font-weight: 700;
  text-transform: uppercase;
  margin-bottom: 16px;
}

.dropdown__item {
  margin-bottom: 2px;
}

.dropdown__link {
  color: #666;
  text-decoration: none;
  transition: 0.3s;
}

.dropdown__link_active,
.dropdown__link:hover {
  color: #2E3092;
}

/*
error-block
*/

.error-block {
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f2f2f3;
  text-align: center;
  padding: 40px 0;
  color: #000;
}

.error-block__image {
  display: block;
  margin: 0 auto 26px;
  max-width: 100%;
}

.error-block__title {
  font-size: 48px;
  line-height: 1.25;
  font-family: 'Alumni Sans', Helvetica, sans-serif;
  margin-bottom: 10px;
}

.error-block__text {
  font-size: 16px;
  line-height: 1.75;
  color: #666;
  margin-bottom: 44px;
}

.error-block__text a {
  color: #2E3092;
}

.error-block__text a:hover {
  text-decoration: none;
}

.error-block__form {
  display: block;
  position: relative;
  max-width: 370px;
  margin: 0 auto;
}

.error-block__input {
  font-size: 16px;
  line-height: 1.75;
  display: block;
  border: 1px solid #cececf;
  color: #666;
  width: 100%;
  height: 54px;
  padding: 0 20px;
}

.error-block__submit {
  position: absolute;
  top: 50%;
  right: 23px;
  transform: translateY(-50%);
  color: #000;
  background: none;
  border: 0;
  font-size: 20px;
  transition: 0.3s;
}

.error-block__submit:hover {
  color: #2E3092;
}

.faded-block {
  display: block;
}

/*
featured-block
*/

.featured-block {
  background-image: url("../img/dot-gray.jpg");
  padding-top: 125px;
  padding-bottom: 138px;
  overflow: hidden;
}

.featured-block__head {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-align: start;
  align-items: flex-start;
  width: 100%;
  margin-bottom: 56px;
}

.featured-block__head-link {
  display: inline-block;
  vertical-align: top;
  margin-left: auto;
  color: currentColor;
  font-size: 16px;
  text-transform: uppercase;
  font-weight: 500;
  transition: all 0.3s;
  text-decoration: none;
  letter-spacing: 0.12em;
  white-space: nowrap;
}

.featured-block__head-link:hover {
  color: #2E3092;
}

.featured-block__head-icon {
  font-size: 14px;
  margin-right: -0.4em;
  margin-left: 0.4em;
}
/* ... */

